# unsloth

./: .gitignore  README_CODE_RESEARCH.md  pyproject.toml  research_unsloth.py  run_tests.py  setup_research_env.py  simulate_cuda.py  unsloth_patches.py
learning-notes/: LEARNING.md  READMD.md
tests/: conftest.py  test_basic.py  test_simple.py
tests/models/: test_memory_utils.py  test_model_loader.py
tests/models/llama/: README_llama.md  __init__.py  conftest.py  init_patch.py  run_tests.py  test_attention.py  test_fast_llama_model.py  test_integration.py  test_optimization.py  test_rotary_embeddings.py
unsloth/models/: loader.py
