[tool.poetry]
name = "unsloth"
version = "0.1.0"
description = "2-5X faster LLM finetuning"
authors = ["Unsloth AI team <info@unsloth.ai>"]
license = "MIT"
readme = "README.md"
homepage = "http://www.unsloth.ai"
repository = "https://github.com/unslothai/unsloth"
documentation = "https://github.com/unslothai/unsloth"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
setuptools = "*"
setuptools-scm = "*"
unsloth_zoo = { version = ">=2025.3.14" }
cut-cross-entropy = "*"
packaging = "*"
tyro = "*"
transformers = ">=4.46.1,!=4.47.0"
datasets = ">=2.16.0"
sentencepiece = ">=0.2.0"
tqdm = "*"
psutil = "*"
wheel = ">=0.42.0"
numpy = "*"
accelerate = ">=0.34.1"
trl = ">=0.7.9,!=0.9.0,!=0.9.1,!=0.9.2,!=0.9.3,!=0.15.0,<=0.15.2"
peft = ">=0.7.1,!=0.11.0"
protobuf = "<4.0.0"
huggingface_hub = "*"
hf_transfer = "*"
triton-windows = { version = "*", platform = "win32" }
bitsandbytes = ">=0.41.1"
xformers = ">=0.0.22.post7"
modelscope = "^1.23.1"
python-dotenv = "*"
pytest = "*"
pytest-mock = "*"
torch = {version = "^2.6.0", extras = ["cu121"]}
torchvision = "^0.21.0"
torchaudio = "^2.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
